# libfindchars

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pom.xml
.github/: dependabot.yml
.github/workflows/: build.yml
.sentrux/: rules.toml
docs/csv-sweep-data/: csv-sweep-columns.tsv  csv-sweep-fieldlen.tsv  csv-sweep-quotes.tsv  csv-sweep-results.json
docs/sweep-data/: cost-model-regex.tsv  cost-model-regexWithConversion.tsv  cost-model-simdC2Jit.tsv  cost-model-simdCompiled.tsv  cost-model-surface.tsv  sweep-ascii-count.tsv  sweep-density.tsv  sweep-groups.tsv  sweep-multibyte.tsv
java/: pom.xml
java/libfindchars-api/: pom.xml
java/libfindchars-bench/: jmh-result.json  pom.xml  sweep-cost-model-combined.gnuplot  sweep-cost-model.gnuplot  sweep-overview.gnuplot
java/libfindchars-compiler/: pom.xml
java/libfindchars-csv/: pom.xml
libfindchars-api/: pom.xml
libfindchars-bench/: benchmark-distribution.gnuplot  benchmark.gnuplot  csv-sweep-instructions.gnuplot  csv-sweep-overview.gnuplot  jmh-result.json  pom.xml  sweep-instructions.gnuplot
libfindchars-compiler/: pom.xml
libfindchars-compiler/profile-results,settings=profile/org.knownhosts.libfindchars.Benchie.findScalar-SampleTime/: profile.jfr
libfindchars-compiler/src/test/resources/: dummy.txt  pg70903.txt
libfindchars-csv/: pom.xml
libfindchars-examples/: pom.xml
libfindchars-examples/src/main/resources/: 3mb.txt  dummy.txt
libfindchars-runtime/: pom.xml
libfindchars-z3/: pom.xml
rust/: .gitignore  Cargo.toml
rust/findchars/: Cargo.toml
rust/findchars-bench/: Cargo.toml
rust/findchars-bench/benches/: csv_sweep.rs  sweep.rs
rust/findchars-bench/src/: lib.rs
rust/findchars-csv/: Cargo.toml
rust/findchars-csv/src/: lib.rs  quote_filter.rs
rust/findchars-csv/tests/: backend_csv_test.rs  csv_test.rs
rust/findchars-examples/: Cargo.toml
rust/findchars-examples/src/: lib.rs
rust/findchars-solver/: Cargo.toml
rust/findchars-solver/src/: lib.rs  literal.rs  solver.rs
rust/findchars/src/: engine.rs  error.rs  lib.rs  utf8.rs
rust/findchars/src/kernel/: avx2.rs  avx512.rs  mod.rs  neon.rs  scalar.rs
rust/findchars/src/vpa/: mod.rs  prefix.rs
rust/findchars/tests/: engine_test.rs  parity_test.rs  utf8_test.rs  vpa_test.rs
scripts/: fit-cost-model.py  parse-csv-sweep.py  parse-sweep.py  release-java.sh  release.sh  run-csv-sweep-rust.sh  run-csv-sweep.sh  run-sweep-rust.sh  run-sweep.sh
spec/: 00-index.md  01-core-engine.md  02-constraint-solver.md  03-utf8-pipeline.md  04-vpa-filters.md  05-engine-compilation.md  06-csv-parser.md  07-performance.md
src/test/resources/: pg70923.txt
(+169 files in other folders)
