[package]
name = "findchars-bench"
description = "Benchmarks for findchars"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
findchars.workspace = true
findchars-csv.workspace = true
rand = "0.9"
regex = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "sweep"
harness = false

[[bench]]
name = "csv_sweep"
harness = false
