[package]
name = "findchars-solver"
description = "Z3-based constraint solver for libfindchars shuffle LUT generation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
z3 = { version = "0.12", features = ["static-link-z3"] }
